--- a/html/services.html
+++ b/html/services.html
@@ -8,7 +8,7 @@
     <title>Best Online Food Delivery Service in India | MyOnlineMeal.com</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" media="screen and (max-width: 1170px)" href="css/phone.css">
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Bree+Serif&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -18,16 +18,16 @@
         </div>
         <ul>
             <li class="item"><a href="#home">Home</a></li>
-            <li class="item"><a href="#services-container">Services</a></li>
-            <li class="item"><a href="#client-section">Our Clients</a></li>
-            <li class="item"><a href="#contact">Contact Us</a></li>
+            <li class="item"><a href="html/services.html">Services</a></li>
+            <li class="item"><a href="html/About Our Clients.html">Our Clients</a></li>
+            <li class="item"><a href="html/Contact Us.html">Contact Us</a></li>
         </ul>
     </nav>
 
     <section id="home">
         <h1 class="h-primary">Welcome to MyOnlineMeal</h1>
-        <p>We serve you the best and the most tasty food from different restaurants and hotels of Kolkata.</p>
-        <p>Use the button below to start ordering tasty.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis dolorum numquam minus. </p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
         <button class="btn">Order Now</button>
     </section>
 
@@ -37,20 +37,20 @@
             <div class="box">
                 <img src="img/1.png" alt="">
                 <h2 class="h-secondary center">Food Catering</h2>
-                <p class="center">Catering is the business of providing food service at a remote site or a site such as a hotel, hospital, pub, aircraft, cruise ship, park, filming site or studio, entertainment site, or event venue.We have experience of serving over a
-                    100 weddings, anniversaries and concerts. We also provid catering services to the EDEN GARDENS and THE BIKA GARDENS. </p>
+                <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et qui, repudiandae similique nam, recusandae quidem ab asperiores ex, aut fugit labore veritatis
+                    facere? sint delectus ab dolorum nam. Debitis facere, incidunt voluptates eos, mollitia voluptatem iste sunt voluptas beatae facilis labore, omnis sint quae eum.</p>
             </div>
             <div class="box">
                 <img src="img/2.png" alt="">
                 <h2 class="h-secondary center">Bulk Ordering</h2>
-                <p class="center">If you want to order food in large quantites, whether for hostel services or whatever reason it may be, then we are the people you should contact. MyOnlineMeal.com is serving more than 100 PGs and hostels across different locations in
-                    Kolkata.We also provide food to the messes and cafes in the JADHAVPUR UNIVERSITY. Apart from this we also provide FREE food to the Ramakrishna Mission and The Missionaries of Charity.To know more do Contact Us.</p>
+                <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde laudantium a incidunt animi ad, ab dignissimos vero? Unde numquam odit repudiandae perferendis
+                    nisi. sint delectus ab dolorum nam. Debitis facere, incidunt voluptates eos, mollitia voluptatem iste sunt voluptas beatae facilis labore, omnis sint quae eum.</p>
             </div>
             <div class="box">
                 <img src="img/3.png" alt="">
                 <h2 class="h-secondary center">Food Ordering</h2>
-                <p class="center">Online food ordering is a process of ordering food from a local restaurant or food cooperative through a web page or app. Much like ordering consumer goods online, many of these allow customers to keep accounts with them in order to make
-                    frequent ordering convenient.If your son/daughter is alone at home and is hungry, DONOT worry we will serve him all th yummy and tasty food he wants to eat. What he needs to do is just come to our site MyOnlineMeal.com</p>
+                <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus provident fugiat aliquam minima at explicabo. Earum eveniet quaerat, sunt molestias
+                    nesciunt quas! Quis. sint delectus ab dolorum nam. Debitis facere, incidunt voluptates eos, mollitia voluptatem iste sunt voluptas beatae facilis labore, omnis sint quae eum.</p>
             </div>
         </div>
     </section>
@@ -59,17 +59,17 @@
         <h1 class="h-primary center">Our Clients</h1>
         <div id="clients">
             <div class="client-item">
-                <img src="img/logo3.png" alt="Our Client">
+                <img src="img/logo1.png" alt="Our Client">
             </div>
             <div class="client-item">
                 <img src="img/logo2.png" alt="Our Client">
             </div>
 
             <div class="client-item">
-                <img src="img/logo1.png" alt="Our Client">
+                <img src="img/logo4.png" alt="Our Client">
             </div>
             <div class="client-item">
-                <img src="img/logo4.png" alt="Our Client">
+                <img src="img/logo3.png" alt="Our Client">
             </div>
         </div>
 
@@ -101,7 +101,7 @@
 
     <footer>
         <div class="center">
-            Copyright &copy; www.myOnlineMeal.com. All rights reserved!!
+            Copyright &copy; www.myOnlineMeal.com. All rights reserved!
         </div>
     </footer>
 </body>
